# Muniffic

./: .editorconfig  .gitignore  .gitmodules  CMakeCache.txt  Dependencies.cmake  Dependencies.lua  README.md  UpgradeLog.htm  WAVEMIX.INI.txt  cmake-gen.bat  cmakeBuild.bat  cmakelists.txt  premake5.lua  ssss
Engine/: ImGuizmo.i  cmakelists.txt  premake5.lua
Engine-Editor/: .env  Commands.cpp  CustomScriptsCmakeLists.txt  SandboxProject - Shortcut.lnk  cmakelists.txt  imgui.ini  premake5.lua  recentProjectSerializer.txt
Engine-Editor/GameJam/: Game.mnproj
Engine-Editor/Hello/: Hello.mnproj
Engine-Editor/NewProj/: NewProj.mnproj
Engine-Editor/Projects/Quest/Assets/Scripts/: CMakeLists.txt
Engine-Editor/Projects/Quest/Assets/Scripts/Source/: AttackBoxComponent.cs  Bullet.cs  Enums.cs  GroundCheck.cs  MeleeAttackComponent.cs  ShootAttackComponent.cs
Engine-Editor/Projects/Quest/Assets/Scripts/Source/Camera/: CameraMove.cs
Engine-Editor/Projects/Quest/Assets/Scripts/Source/Effects/: HealEffect.cs
Engine-Editor/Projects/Quest/Assets/Scripts/Source/Enemies/: BaseEnemy.cs  CircleEnemy.cs  EnemyAttackBoxComponent.cs  EnemyMeleeAttackComponent.cs  EnemyRunComponent.cs  EnemyShootAttackComponent.cs  SquareEnemy.cs  TriangleEnemy.cs
Engine-Editor/Projects/Quest/Assets/Scripts/Source/Map Elements/: Fire.cs  Lava.cs  Mushroom.cs  Spike.cs  WeightedVest.cs
Engine-Editor/Projects/Quest/Assets/Scripts/Source/Players/: JumpComponent.cs  Player.cs  PlayerAttackBoxComponent.cs  RunComponent.cs  ShootAttackComponent.cs
Engine-Editor/Quest for the Solar Sombrero/: Quest.mnproj
Engine-Editor/SandboxProject/: Sandbox.mnproj
Engine-Editor/TestProject/: TestProject.mnproj
Engine-Editor/Testing/: Testing.mnproj
Engine-Editor/chuj1/: chuj1.mnproj
Engine-Editor/chuj2/: chuj2.mnproj
Engine-Editor/chuj3/: chuj3.mnproj
Engine-Editor/chuj4/: chuj4.mnproj
Engine-Editor/chuj5/: chuj5.mnproj
Engine-Editor/chuuj4/: chuuj4.mnproj
Engine-Editor/miku/: miku.mnproj
Engine-Editor/new/: New.mnproj
Engine-Editor/scriptsTest/: scriptsTest.mnproj
Engine-Editor/scriptsTest1/: scriptsTest1.mnproj
Engine-Editor/silli/: silli.mnproj
Engine-Editor/src/: EditorActions.cpp  EditorActions.h  EditorActionsHelper.h  EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.cpp~RF4a03549.TMP  EditorLayer.cpp~RFb4d1620.TMP  EditorLayer.cpp~RFb53531c.TMP  EditorLayer.cpp~RFb54e2e4.TMP  EditorLayer.h  IconLoader.cpp  IconLoader.h
Engine-Editor/testIcons/: testIcons.mnproj
Engine-Editor/tets837373/: tets837373.mnproj
Engine/src/: Engine.h  egpch.h
Muniffic-ScriptCore/: cmakelists.txt  premake5.lua
Muniffic-ScriptCore/Source/: Input.cs  KeyCode.cs  Main.cs  Player.cs
Sandbox/: EngineProfile-Runtime.json  EngineProfile-Shutdown.json  EngineProfile-Startup.json  imgui.ini  premake5.lua
Sandbox/assets/: Sandbox — skrót.lnk
Sandbox/src/: ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
doc/: Muniffic-Documentation.docx  Muniffic.docx  ~$niffic.docx  ~WRL2230.tmp
doc/JSONGenerator/: Program.cs
doc/Scripting Engine Docs/: Scripting-Engine-Examples.cs
scripts/: Setup.bat  Setup.py  SetupPython.py  SetupVulkan.py  Vulkan.py  cmake-gen.bat
x64/Debug/: Engine.exp  Engine.lib
(+649 files in other folders)
